--- a/Project/Domain.Common/Domain.Common.csproj
+++ b/Project/Domain.Common/Domain.Common.csproj
@@ -36,7 +36,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateRoot.cs" />
+    <Compile Include="AuthSession.cs" />
     <Compile Include="DomainEvent.cs" />
+    <Compile Include="IAuthSession.cs" />
     <Compile Include="IHandleCommand.cs" />
     <Compile Include="IHandleDomainEvent.cs" />
     <Compile Include="IMessage.cs" />
@@ -45,6 +47,7 @@
     <Compile Include="Infrastructure\IKeyValueStore.cs" />
     <Compile Include="Infrastructure\ILogger.cs" />
     <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
