--- a/Project/Domain.QueryModel/Domain.QueryModel.csproj
+++ b/Project/Domain.QueryModel/Domain.QueryModel.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6B587842-9E89-43F6-80DE-F2E5EBAFC5B3}</ProjectGuid>
+    <ProjectGuid>{CDCC4C11-7288-4CD5-88F5-F262216F30B4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Domain.Common</RootNamespace>
-    <AssemblyName>Domain.Common</AssemblyName>
+    <RootNamespace>Domain.QueryModel</RootNamespace>
+    <AssemblyName>Domain.QueryModel</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -35,20 +35,6 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregateRoot.cs" />
-    <Compile Include="AuthSession.cs" />
-    <Compile Include="DomainEvent.cs" />
-    <Compile Include="IAuthSession.cs" />
-    <Compile Include="IHandleCommand.cs" />
-    <Compile Include="IHandleDomainEvent.cs" />
-    <Compile Include="IMessage.cs" />
-    <Compile Include="Infrastructure\IBus.cs" />
-    <Compile Include="ICommand.cs" />
-    <Compile Include="Infrastructure\IEventStore.cs" />
-    <Compile Include="Infrastructure\IKeyValueStore.cs" />
-    <Compile Include="Infrastructure\ILogger.cs" />
-    <Compile Include="Infrastructure\IRepository.cs" />
-    <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
