--- a/Project/Project.Infrastructure/Project.Infrastructure.csproj
+++ b/Project/Project.Infrastructure/Project.Infrastructure.csproj
@@ -49,7 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbSessionEF.cs" />
+    <Compile Include="EFSession.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
