--- a/Project/Project.Infrastructure/Project.Adapters.csproj
+++ b/Project/Project.Infrastructure/Project.Adapters.csproj
@@ -61,7 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ActionDictionaryBus.cs" />
+    <Compile Include="ConsoleLogger.cs" />
+    <Compile Include="DelegateAdjuster.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="MemoryKeyValueStore.cs" />
+    <Compile Include="MemoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedisKeyValueStore.cs" />
   </ItemGroup>
