--- a/Project/Domain.Common/Common.csproj
+++ b/Project/Domain.Common/Common.csproj
@@ -35,19 +35,19 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AggregateRoot.cs" />
-    <Compile Include="AuthSession.cs" />
-    <Compile Include="AuthToken.cs" />
-    <Compile Include="Credentials.cs" />
-    <Compile Include="DomainEvent.cs" />
-    <Compile Include="Ensure.cs" />
-    <Compile Include="IAuthSession.cs" />
-    <Compile Include="IHandleCommand.cs" />
-    <Compile Include="IHandleDomainEvent.cs" />
-    <Compile Include="IMessage.cs" />
+    <Compile Include="Domain.Model\AggregateRoot.cs" />
+    <Compile Include="Domain.Model\AuthSession.cs" />
+    <Compile Include="Domain.Model\AuthToken.cs" />
+    <Compile Include="Domain.Model\Credentials.cs" />
+    <Compile Include="Domain.Model\DomainEvent.cs" />
+    <Compile Include="Domain.Model\Ensure.cs" />
+    <Compile Include="Domain.Model\IAuthSession.cs" />
+    <Compile Include="Domain.Model\IHandleCommand.cs" />
+    <Compile Include="Domain.Model\IHandleDomainEvent.cs" />
+    <Compile Include="Domain.Model\IMessage.cs" />
     <Compile Include="Adapters\IAuthProvider.cs" />
     <Compile Include="Adapters\IBus.cs" />
-    <Compile Include="Command.cs" />
+    <Compile Include="Domain.Model\Command.cs" />
     <Compile Include="Adapters\IEventStore.cs" />
     <Compile Include="Adapters\IKeyValueStore.cs" />
     <Compile Include="Adapters\ILogger.cs" />
