--- a/Project/Project.Infrastructure/Project.Adapters.csproj
+++ b/Project/Project.Infrastructure/Project.Adapters.csproj
@@ -61,19 +61,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ActionDictionaryBus.cs" />
-    <Compile Include="ConsoleLogger.cs" />
-    <Compile Include="DelegateAdjuster.cs" />
-    <Compile Include="Logger.cs" />
-    <Compile Include="MemoryKeyValueStore.cs" />
-    <Compile Include="MemoryRepository.cs" />
+    <Compile Include="Bus\ActionDictionaryBus.cs" />
+    <Compile Include="Logging\ConsoleLogger.cs" />
+    <Compile Include="Bus\DelegateAdjuster.cs" />
+    <Compile Include="Logging\Logger.cs" />
+    <Compile Include="Stores\MemoryKeyValueStore.cs" />
+    <Compile Include="Stores\MemoryRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RedisKeyValueStore.cs" />
+    <Compile Include="Stores\RedisKeyValueStore.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Domain.Common\Domain.Common.csproj">
+    <ProjectReference Include="..\Domain.Common\Common.csproj">
       <Project>{6b587842-9e89-43f6-80de-f2e5ebafc5b3}</Project>
-      <Name>Domain.Common</Name>
+      <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
