--- a/Project/Project.Infrastructure/packages.config
+++ b/Project/Project.Infrastructure/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="7.0.1-beta1" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.36" targetFramework="net45" />
   <package id="ServiceStack.Interfaces" version="4.0.36" targetFramework="net45" />
