--- a/Project/Project.Infrastructure/packages.config
+++ b/Project/Project.Infrastructure/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1-beta1" targetFramework="net45" />
   <package id="NLog" version="3.2.0.0" targetFramework="net45" />
+  <package id="Npgsql" version="2.2.4.3" targetFramework="net45" />
   <package id="ServiceStack.Common" version="4.0.36" targetFramework="net45" />
   <package id="ServiceStack.Interfaces" version="4.0.36" targetFramework="net45" />
   <package id="ServiceStack.Redis" version="4.0.36" targetFramework="net45" />
