--- a/Project/Project.Infrastructure/Project.Adapters.csproj
+++ b/Project/Project.Infrastructure/Project.Adapters.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{A364A42E-B221-4EF9-B391-301A2D418F1B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Project.Infrastructure</RootNamespace>
-    <AssemblyName>Project.Infrastructure</AssemblyName>
+    <RootNamespace>Project.Adapters</RootNamespace>
+    <AssemblyName>Project.Adapters</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
