--- a/Project/Domain.Common/Common.csproj
+++ b/Project/Domain.Common/Common.csproj
@@ -36,12 +36,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Adapters\RepositoryBase.cs" />
+    <Compile Include="Application\DomainEventPublisherService.cs" />
     <Compile Include="Domain.Model\AggregateRoot.cs" />
     <Compile Include="Domain.Model\AuthSession.cs" />
     <Compile Include="Domain.Model\AuthToken.cs" />
     <Compile Include="Domain.Model\Credentials.cs" />
     <Compile Include="Domain.Model\DomainEvent.cs" />
-    <Compile Include="Domain.Model\DomainEventAggregate.cs" />
+    <Compile Include="Domain.Model\DomainEventsPublishedTracker.cs" />
+    <Compile Include="Domain.Model\StoredDomainEvent.cs" />
     <Compile Include="Domain.Model\Ensure.cs" />
     <Compile Include="Domain.Model\IAuthSession.cs" />
     <Compile Include="Domain.Model\IHandleCommand.cs" />
