--- a/Project/NinjectBinding/NinjectBinding.csproj
+++ b/Project/NinjectBinding/NinjectBinding.csproj
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{6B587842-9E89-43F6-80DE-F2E5EBAFC5B3}</ProjectGuid>
+    <ProjectGuid>{B1D121FD-AD46-4B97-8049-F66C6B8D5B27}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Domain.Common</RootNamespace>
-    <AssemblyName>Domain.Common</AssemblyName>
+    <RootNamespace>NinjectBinding</RootNamespace>
+    <AssemblyName>NinjectBinding</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,33 +30,39 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Ninject, Version=3.2.0.0, Culture=neutral, PublicKeyToken=c7192dc5380945e7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Ninject.3.2.2.0\lib\net45-full\Ninject.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Adapters\RepositoryBase.cs" />
-    <Compile Include="Application\DomainEventPublisherService.cs" />
-    <Compile Include="Domain.Model\AggregateRoot.cs" />
-    <Compile Include="Domain.Model\AuthSession.cs" />
-    <Compile Include="Domain.Model\AuthToken.cs" />
-    <Compile Include="Domain.Model\Credentials.cs" />
-    <Compile Include="Domain.Model\DomainEvent.cs" />
-    <Compile Include="Domain.Model\DomainEventsPublishedTracker.cs" />
-    <Compile Include="Domain.Model\StoredDomainEvent.cs" />
-    <Compile Include="Domain.Model\Ensure.cs" />
-    <Compile Include="Domain.Model\IAuthSession.cs" />
-    <Compile Include="Domain.Model\IHandleCommand.cs" />
-    <Compile Include="Domain.Model\IHandleDomainEvent.cs" />
-    <Compile Include="Domain.Model\IMessage.cs" />
-    <Compile Include="Adapters\IAuthProvider.cs" />
-    <Compile Include="Adapters\IBus.cs" />
-    <Compile Include="Domain.Model\Command.cs" />
-    <Compile Include="Adapters\IEventStore.cs" />
-    <Compile Include="Adapters\IKeyValueStore.cs" />
-    <Compile Include="Adapters\ILogger.cs" />
-    <Compile Include="Adapters\IRepository.cs" />
+    <Compile Include="NinjectBindings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Domain.Common\Domain.Common.csproj">
+      <Project>{6b587842-9e89-43f6-80de-f2e5ebafc5b3}</Project>
+      <Name>Domain.Common %28Domain.Common\Domain.Common%29</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Example\Operations.csproj">
+      <Project>{aa12b10b-dce2-4853-a5be-5299d9583558}</Project>
+      <Name>Operations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Project.Infrastructure\Project.Adapters.csproj">
+      <Project>{a364a42e-b221-4ef9-b391-301a2d418f1b}</Project>
+      <Name>Project.Adapters</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
